cleanup: strip all comments, remove dead code, clean identifiers, add translation system + lang files